Improved media queries for mobile view- fixed text alignment issues in style.css. Added hover border to box containers on index.html

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,14 @@ header .highlight {
     color: #d30ed3;
 }
 
+.container li {
+    height: 100%;
+}
+
+.container li a {
+    height: 100%;
+}
+
 header .current {
         background-color: #d30ed3;
         font-weight: bold;
@@ -203,10 +211,16 @@ header a:hover {
     width: 30%;
 
     padding: 10px;
+
+    border-radius: 4px;
 }
 
 #boxes .box img {
     height: 90px;
+}
+
+#boxes .box:hover {
+    border: 4px #d30ed3 solid;
 }
 
 /* Sidebar */
@@ -309,8 +323,20 @@ footer p {
     article#main-col,
     aside#sidebar {
         float: none;
-        text-align: center;
         width: 100%;
+    }
+
+    header #branding,
+    header nav,
+    header nav li,
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box {
+        text-align: center;
+    }
+
+    .container {
+        width: 90%;
     }
 
     #branding h1 {
@@ -342,6 +368,8 @@ footer p {
         font-weight: bold;
         color: white;
     }
+
+
 
     #showcase h1 {
         margin-top: 40px;
